tests/snapshots/printed_commands__rescue_prints_no_sh_line_for_such_a_path.snap
---
source: tests/printed_commands.rs
expression: "format!(\"{refused}\\n---\\nexit {code}\\n{text}\")"
---
exit 2
ricepilot: refusing: there is no rescue script yet. one is written after each successful switch, and until a switch has happened there is no previous generation for it to restore (<HOME>/.local/state/rice\necho INJECTED #/rescue.sh) [R7]

---
exit 0
the standalone rescue script is at:
  <HOME>/.local/state/rice\necho INJECTED #/rescue.sh

run it from a TTY (Ctrl+Alt+F2 … F6) with:
  (no command is printed for <HOME>/.local/state/rice\necho INJECTED #/rescue.sh: its name holds a control character, which a line pasted into a shell cannot carry. D72)

it restores the previous generation using absolute paths only. it needs no ricepilot,
no D-Bus, no hyprctl and no shell but /bin/sh, and it removes nothing: anything it
displaces goes to `state/attic/`.
